load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)

drake_cc_vector_gen_library(
    name = "pendulum_vector_types",
    srcs = [
        "pendulum_input_named_vector.yaml",
        "pendulum_params_named_vector.yaml",
        "pendulum_state_named_vector.yaml",
    ],
)

drake_cc_library(
    name = "pendulum_plant",
    srcs = ["pendulum_plant.cc"],
    hdrs = ["pendulum_plant.h"],
    deps = [
        ":pendulum_vector_types",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "pendulum_geometry",
    srcs = ["pendulum_geometry.cc"],
    hdrs = ["pendulum_geometry.h"],
    deps = [
        ":pendulum_plant",
        ":pendulum_vector_types",
        "//geometry:geometry_roles",
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_binary(
    name = "passive_simulation",
    srcs = ["passive_simulation.cc"],
    data = [],
    deps = [
        ":pendulum_geometry",
        ":pendulum_plant",
        "//geometry:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)
